<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mainBackgroundmageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        android:alpha=".15"
        android:contentDescription="@string/profile_picture"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_people" />

    <ImageView
        android:id="@+id/mainLogoImageView"
        android:layout_width="113dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logoimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/mainAppNameImageView"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/rewardsimage"
        app:layout_constraintBottom_toBottomOf="@+id/mainLogoImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mainLogoImageView"
        app:layout_constraintTop_toTopOf="@+id/mainLogoImageView"
        app:srcCompat="@drawable/name_image" />

    <EditText
        android:id="@+id/mainUsernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/textBoxBackground"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textAlignment="viewStart"
        android:textColorHint="@color/textOrange"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/mainAppNameImageView"
        app:layout_constraintStart_toStartOf="@+id/mainLogoImageView"
        app:layout_constraintTop_toBottomOf="@+id/mainLogoImageView" />

    <EditText
        android:id="@+id/mainPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/textBoxBackground"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="40"
        android:textColorHint="@color/textOrange"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/mainUsernameEditText"
        app:layout_constraintStart_toStartOf="@+id/mainUsernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/mainUsernameEditText" />

    <Button
        android:id="@+id/mainLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/grey"
        android:backgroundTint="@color/grey"
        android:onClick="loginEmployee"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/mainUsernameEditText"
        app:layout_constraintStart_toStartOf="@+id/mainUsernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/mainPasswordEditText" />

    <CheckBox
        android:id="@+id/mainRememberCredentialsCheckbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:text="@string/remember_my_credentials"
        android:textAlignment="viewStart"
        android:textColor="@color/darkTextOrange"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/mainUsernameEditText"
        app:layout_constraintStart_toStartOf="@+id/mainUsernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/mainLoginButton" />

    <TextView
        android:id="@+id/mainCreateProfileTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:onClick="createProfile"
        android:text="@string/tap_here_to_create_a_profile"
        android:textAlignment="center"
        android:textColor="@color/darkTextOrange"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/mainUsernameEditText"
        app:layout_constraintStart_toStartOf="@+id/mainUsernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/mainRememberCredentialsCheckbox" />

    <TextView
        android:id="@+id/mainClearApiTextview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:onClick="clearSavedApi"
        android:text="@string/tap_to_clear_saved_api"
        android:textAlignment="center"
        android:textColor="@color/darkTextOrange"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mainCreateProfileTextView"
        app:layout_constraintStart_toStartOf="@+id/mainCreateProfileTextView" />

    <ProgressBar
        android:id="@+id/mainProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:indeterminate="false"
        android:indeterminateTint="#FF6D00"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>