<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/apiFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/grey"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/textOrange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/apiLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/textOrange"
        app:layout_constraintEnd_toEndOf="@+id/apiFirstName"
        app:layout_constraintStart_toStartOf="@+id/apiFirstName"
        app:layout_constraintTop_toBottomOf="@+id/apiFirstName" />

    <EditText
        android:id="@+id/apiEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        android:ems="10"
        android:hint="@string/student_email_edu"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="@color/textOrange"
        app:layout_constraintEnd_toEndOf="@+id/apiLastName"
        app:layout_constraintStart_toStartOf="@+id/apiLastName"
        app:layout_constraintTop_toBottomOf="@+id/apiLastName" />

    <EditText
        android:id="@+id/apiStudentID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        android:ems="10"
        android:hint="@string/student_id_number"
        android:inputType="number"
        android:maxLength="20"
        android:textAlignment="center"
        android:textColorHint="@color/textOrange"
        app:layout_constraintEnd_toEndOf="@+id/apiEmail"
        app:layout_constraintStart_toStartOf="@+id/apiEmail"
        app:layout_constraintTop_toBottomOf="@+id/apiEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>